; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_cp.c_radeon_cp_buffers.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_cp.c_radeon_cp_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.drm_device_dma* }
%struct.drm_device_dma = type { i64 }
%struct.drm_file = type { i32 }
%struct.drm_dma = type { i64, i64, i64 }

@.str = private unnamed_addr constant [49 x i8] c"Process %d trying to send %d buffers via drmDMA\0A\00", align 1
@DRM_CURRENTPID = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [49 x i8] c"Process %d trying to get %d buffers (of %d max)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @radeon_cp_buffers(%struct.drm_device* %0, i8* %1, %struct.drm_file* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.drm_device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.drm_file*, align 8
  %8 = alloca %struct.drm_device_dma*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.drm_dma*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.drm_file* %2, %struct.drm_file** %7, align 8
  %11 = load %struct.drm_device*, %struct.drm_device** %5, align 8
  %12 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %11, i32 0, i32 0
  %13 = load %struct.drm_device_dma*, %struct.drm_device_dma** %12, align 8
  store %struct.drm_device_dma* %13, %struct.drm_device_dma** %8, align 8
  store i32 0, i32* %9, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = bitcast i8* %14 to %struct.drm_dma*
  store %struct.drm_dma* %15, %struct.drm_dma** %10, align 8
  %16 = load %struct.drm_device*, %struct.drm_device** %5, align 8
  %17 = load %struct.drm_file*, %struct.drm_file** %7, align 8
  %18 = call i32 @LOCK_TEST_WITH_RETURN(%struct.drm_device* %16, %struct.drm_file* %17)
  %19 = load %struct.drm_dma*, %struct.drm_dma** %10, align 8
  %20 = getelementptr inbounds %struct.drm_dma, %struct.drm_dma* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %31

23:                                               ; preds = %3
  %24 = load i32, i32* @DRM_CURRENTPID, align 4
  %25 = load %struct.drm_dma*, %struct.drm_dma** %10, align 8
  %26 = getelementptr inbounds %struct.drm_dma, %struct.drm_dma* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = call i32 (i8*, i32, i64, ...) @DRM_ERROR(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i32 %24, i64 %27)
  %29 = load i32, i32* @EINVAL, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %4, align 4
  br label %69

31:                                               ; preds = %3
  %32 = load %struct.drm_dma*, %struct.drm_dma** %10, align 8
  %33 = getelementptr inbounds %struct.drm_dma, %struct.drm_dma* %32, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = icmp slt i64 %34, 0
  br i1 %35, label %44, label %36

36:                                               ; preds = %31
  %37 = load %struct.drm_dma*, %struct.drm_dma** %10, align 8
  %38 = getelementptr inbounds %struct.drm_dma, %struct.drm_dma* %37, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = load %struct.drm_device_dma*, %struct.drm_device_dma** %8, align 8
  %41 = getelementptr inbounds %struct.drm_device_dma, %struct.drm_device_dma* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = icmp sgt i64 %39, %42
  br i1 %43, label %44, label %55

44:                                               ; preds = %36, %31
  %45 = load i32, i32* @DRM_CURRENTPID, align 4
  %46 = load %struct.drm_dma*, %struct.drm_dma** %10, align 8
  %47 = getelementptr inbounds %struct.drm_dma, %struct.drm_dma* %46, i32 0, i32 1
  %48 = load i64, i64* %47, align 8
  %49 = load %struct.drm_device_dma*, %struct.drm_device_dma** %8, align 8
  %50 = getelementptr inbounds %struct.drm_device_dma, %struct.drm_device_dma* %49, i32 0, i32 0
  %51 = load i64, i64* %50, align 8
  %52 = call i32 (i8*, i32, i64, ...) @DRM_ERROR(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0), i32 %45, i64 %48, i64 %51)
  %53 = load i32, i32* @EINVAL, align 4
  %54 = sub nsw i32 0, %53
  store i32 %54, i32* %4, align 4
  br label %69

55:                                               ; preds = %36
  %56 = load %struct.drm_dma*, %struct.drm_dma** %10, align 8
  %57 = getelementptr inbounds %struct.drm_dma, %struct.drm_dma* %56, i32 0, i32 2
  store i64 0, i64* %57, align 8
  %58 = load %struct.drm_dma*, %struct.drm_dma** %10, align 8
  %59 = getelementptr inbounds %struct.drm_dma, %struct.drm_dma* %58, i32 0, i32 1
  %60 = load i64, i64* %59, align 8
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %67

62:                                               ; preds = %55
  %63 = load %struct.drm_device*, %struct.drm_device** %5, align 8
  %64 = load %struct.drm_file*, %struct.drm_file** %7, align 8
  %65 = load %struct.drm_dma*, %struct.drm_dma** %10, align 8
  %66 = call i32 @radeon_cp_get_buffers(%struct.drm_device* %63, %struct.drm_file* %64, %struct.drm_dma* %65)
  store i32 %66, i32* %9, align 4
  br label %67

67:                                               ; preds = %62, %55
  %68 = load i32, i32* %9, align 4
  store i32 %68, i32* %4, align 4
  br label %69

69:                                               ; preds = %67, %44, %23
  %70 = load i32, i32* %4, align 4
  ret i32 %70
}

declare dso_local i32 @LOCK_TEST_WITH_RETURN(%struct.drm_device*, %struct.drm_file*) #1

declare dso_local i32 @DRM_ERROR(i8*, i32, i64, ...) #1

declare dso_local i32 @radeon_cp_get_buffers(%struct.drm_device*, %struct.drm_file*, %struct.drm_dma*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
